chore: made jlink a part of maven build