@@ -28,12 +28,12 @@
     <name>QuestDB Core</name>
     <description>QuestDB is High Performance Time Series Database</description>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<nodejs.npm.cmd>npm</nodejs.npm.cmd>
-		<nodejs.version>v12.16.2</nodejs.version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <nodejs.npm.cmd>npm</nodejs.npm.cmd>
+        <nodejs.version>v12.16.2</nodejs.version>
         <javac.target>11</javac.target>
-	</properties>
+    </properties>
 
     <version>4.3.0-SNAPSHOT</version>
     <groupId>org.questdb</groupId>
@@ -81,6 +81,9 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
+                <configuration>
+                    <longModulepath>false</longModulepath>
+                </configuration>
                 <executions>
                     <execution>
                         <id>npm-install</id>
@@ -114,6 +117,28 @@
                             <workingDirectory>../ui</workingDirectory>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>jlink</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <executable>${java.home}/bin/jlink</executable>
+                            <arguments>
+                                <argument>--module-path</argument>
+                                <argument>${build.outputDirectory}</argument>
+                                <argument>--add-modules</argument>
+                                <argument>io.questdb</argument>
+                                <argument>--output</argument>
+                                <argument>${build.directory}/runtime</argument>
+                                <argument>--no-header-files</argument>
+                                <argument>--no-man-pages</argument>
+                                <argument>--compress=2</argument>
+                            </arguments>
+                            <workingDirectory>../core</workingDirectory>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
@@ -142,23 +167,8 @@
                 <version>3.0.0</version>
                 <configuration>
                     <tarLongFileMode>posix</tarLongFileMode>
-                    <descriptors>
-                        <descriptor>src/main/assembly/assembly.xml</descriptor>
-                    </descriptors>
                 </configuration>
                 <executions>
-                    <execution>
-                        <id>create-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <descriptors>
-                                <descriptor>src/main/assembly/assembly.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                    </execution>
                     <execution>
                         <id>create-binary</id>
                         <phase>package</phase>
@@ -168,6 +178,19 @@
                         <configuration>
                             <descriptors>
                                 <descriptor>src/main/assembly/binaries.xml</descriptor>
+                            </descriptors>
+                            <finalName>questdb-${project.version}</finalName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-runtime</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/runtime.xml</descriptor>
                             </descriptors>
                             <finalName>questdb-${project.version}</finalName>
                         </configuration>
@@ -253,8 +276,8 @@
                     </plugin>
                 </plugins>
             </build>
-	      </profile>
-		    <profile>
+        </profile>
+        <profile>
             <id>install-local-nodejs</id>
             <properties>
                 <nodejs.npm.cmd>${project.basedir}/node/npm</nodejs.npm.cmd>
@@ -285,7 +308,7 @@
                     </plugin>
                 </plugins>
             </build>
-		    </profile>
+        </profile>
         <profile>
             <id>platform-windows</id>
             <activation>
